--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 							</div>
 						</div>
 						<!-- Header -->
-						<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-							<img class="w3-image" src="./images/home.jpg" alt="home" width="100%" height=auto>
+						<header class="w3-display-container w3-auto w3-wide" id="home">
+							<img src="./images/home.jpg" alt="home" height="100%" style="margin-left:auto;margin-right:auto">
 								<div class="w3-display-bottomleft w3-padding-large">
-									<h1 style="color: white; opacity: 1">
+									<h1 style="color:white;opacity:1">
 										<b>DeVAULT WILDLIFE LAB</b>
 									</h1>
 									<p style="color: white;">at University of Georgia&mdash;Savannah River Ecology Lab</p>
@@ -36,7 +36,7 @@
 								<div class="w3-container w3-padding-64" id="what">
 									<div class="grid-container">
 										<div>
-											<img src="./images/mistnet_crop4.jpg" class="w3-round w3-image" alt="what" width="100%" height="auto"></div>
+											<img src="./images/mary3.jpeg" class="w3-round w3-image" alt="what" width="100%" height="auto" style="margin-top:25%"></div>
 										<div>
 											<h1 class="w3-center">What We Do</h1>
 											<p class="w3-large">The DeVault Wildlife Lab is a research group at the
@@ -47,10 +47,10 @@
 									</div>
 									<hr>
 										<!-- Where We Work -->
-										<div class="w3-container w3-padding-64" id="where">
+										<div class="w3-container w3-padding-32" id="where">
 											<div class="grid-container">
 												<div>
-													<img src="./images/where.png" class="w3-round w3-image" alt="where" width="100%" height="auto"></div>
+													<img src="./images/srel.webp" class="w3-round w3-image" alt="where" width="100%" height="auto" style="margin-top:25%"></div>
 												<div>
 													<h1 class="w3-center">Where We Work</h1>
 													<p class="w3-large">The Savannah River Ecology Lab (SREL), a research unit of the University of Georgia, pursues basic and applied research at multiple levels of ecological organization, from atoms to ecosystems. SREL is located near Aiken, SC, on the Savannah River Site, a Department of Energy facility and the first national environmental research park. Research at SREL extends beyond the site to regional and global projects. To date, the lab has produced more than 3,000 peer-reviewed publications.</p>
@@ -61,7 +61,7 @@
 		
 											
 												<!-- News section -->
-												<div class="w3-row w3-padding-64">
+												<div class="w3-row w3-padding-32">
 													<div style="margin: 0 auto; width: 80%" id="news">
 														<a class="twitter-timeline" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw">Recent News from DeVault Lab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 													</div>
