--- a/opportunities.html
+++ b/opportunities.html
@@ -36,17 +36,18 @@
 								<h3>Contact Information</h3>
 								<div style="line-height:60%">
 								<br>
-								<p>Dr. Travis DeVault</p>
+								<p>For general questions, please reach out by email to our lab manager, Jon Skaggs (jskaggs at uga dot edu).</p>
+								<br>
+								<p>DeVault Lab</p>
 								<p>University of Georgia, Savannah River Ecology Laboratory</p>
 								<p>Regular Mail: PO Drawer E, Aiken, SC 29802</p>
 								<p>Courier: SREL, SRS Bldg 737A, Aiken, SC 29808</p>
-								<p>Office: (803) 725-5679</p>
-								<p>E-mail: devault at srel dot uga dot edu</p>
 								</div>
 								</div>
 								<div class="w3-container w3-padding-16">
 								<h3>Current Opportunities</h3>
-									<p>No opportunities are currently available.</p>
+									<p>Here, we'll post information about graduate student and other research positions in the DeVault Lab.</p>
+									<p><i>There are no open positions at this time.</i></p>
 								</div>
 								<div class="w3-container w3-padding-16">
 								<h3>Prospective students</h3>
