--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<title>Collaborators | DeVault Wildlife Lab</title>
+	<title>Publications | DeVault Wildlife Lab</title>
 	<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="stylesheet" href="style.css">
@@ -206,10 +206,13 @@
 											<!-- End page content -->
 										</div>
 										<!-- Footer -->
-										<footer class="w3-center w3-light-grey w3-padding-32">
-											<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
-												<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
-											</p>
-										</footer>
+						<footer class="w3-center w3-light-grey w3-padding-32">
+							<p class="w3-small">The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia.</p>
+							<p class="w3-small">
+								<a href="https://github.com/devaultlab/devaultlab.github.io" title="Website theme" target="_blank" class="w3-hover-text-green">Website theme</a>
+								modified from
+								<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
+							</p>
+						</footer>
 									</body>
 								</html>
