--- a/people.html
+++ b/people.html
@@ -34,11 +34,11 @@
 							<div class="w3-container w3-padding-64"/>
 							<div class="grid-container" style="margin-left:16px!important">
 								<div>
-									<img src="./images/travis_temp.jpg" class="w3-round" alt="travis" width="100%" height="auto">
+									<img src="./images/travis2.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="margin-top:5%">
 										<img src="./images/travis_interests.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="padding-top:10%"></div>
 									<div>
 										<h5>Travis DeVault, Ph.D</h5>
-										<p style="color: grey">Principle Investigator / travis at uga dot edu /
+										<p style="color: grey">Principal Investigator / travis dot devault at uga dot edu /
 											<a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank" class="w3-hover-text-green">Google Scholar</a>
 											<p>Travis DeVault is the Associate Director for Research and Senior Research Scientist at the
 												<a href="https://srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">University of Georgia's Savannah River Ecology Laboratory (SREL)</a>
@@ -47,42 +47,41 @@
 												where he advises graduate students. He earned bachelor’s and master’s degrees in ecology and systematics from the
 												<a href="https://www.indstate.edu/cas/biology" title="Department of Biology at Indiana State University" target="_blank" class="w3-hover-text-green">Department of Biology at Indiana State University</a>
 												and a PhD in wildlife ecology from the
-												<a href="https://ag.purdue.edu/fnr/Pages/default.aspx" title="Department of Forestry and Natural Resources at Purdue University" target="_blank" class="w3-hover-text-green">Department of Forestry and Natural Resources at Purdue University</a>
-												. Travis is a wildlife ecologist and conservation biologist; his research focuses on understanding and preventing animal-vehicle collisions and other human-wildlife conflicts. He also maintains a long term research interest in the ecology of vultures and other vertebrate scavengers. Outside of work, Travis is a jack of all trades and master of none. He’s an eclectic sort who enjoys fishing, hunting, kayaking and canoeing, hiking with his family, wrestling with his dogs, playing basketball, obsessing over Chicago Cubs baseball and Indianapolis Colts football, blues guitar, tinkering in his woodshop, and playing video games while consuming bourbon and scotch. Actually, he is pretty good at that last one.
+												<a href="https://ag.purdue.edu/fnr/Pages/default.aspx" title="Department of Forestry and Natural Resources at Purdue University" target="_blank" class="w3-hover-text-green">Department of Forestry and Natural Resources at Purdue University</a>. Travis is a wildlife ecologist and conservation biologist; his research focuses on understanding and preventing animal-vehicle collisions and other human-wildlife conflicts. He also maintains a long term research interest in the ecology of vultures and other vertebrate scavengers. Outside of work, Travis is a jack of all trades and master of none. He’s an eclectic sort who enjoys fishing, hunting, kayaking and canoeing, hiking with his family, wrestling with his dogs, playing basketball, obsessing over Chicago Cubs baseball and Indianapolis Colts football, blues guitar, tinkering in his woodshop, and playing video games while consuming bourbon and scotch. Actually, he is pretty good at that last one.
 											</p>
 										</p>
 									</div>
-									<img src="./images/mary.webp" class="w3-round w3-opacity-min" alt="mary" width="100%" height="auto">
+									<img src="./images/mary.jpg" class="w3-round" alt="mary" width="100%" height="auto"  style="margin-top:5%">
 										<div>
 											<h5>Mary Chapman</h5>
-											<p style="color: grey">Project Coordinator / mary at uga dot edu</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+											<p style="color: grey">Project Coordinator / mary dot chapman at uga dot edu</p>
+											<p>Mary leads a study looking at heavy metals in birds that utilize a constructed wetland that receives industrial wastewater. She received her B.S. and M.S. in Environmental Science at Taylor University, Indiana. Her masters research looked at species richness of neotropical migrant birds at different forest corridor widths along an Indiana river adjacent to farmland. The goal was to determine how wide farmers would need to keep their corridors to provide habitat for a diverse array of bird species. Mary is interested in avian ecology and enjoys birding and hiking in her free time. She is working on passing her love of birds and nature on to her 5-year-old son.</p>
 										</div>
-										<img src="./images/shayna.webp" class="w3-round w3-opacity-min" alt="shayna" width="100%" height="auto">
+										<img src="./images/shayna.jpg" class="w3-round" alt="shayna" width="100%" height="auto" style="margin-top:5%">
 											<div>
 												<h5>Shayna Mu&#241;oz</h5>
-												<p style="color: grey">Research Technician / shayna at uga dot edu</p>
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+												<p style="color: grey">Research Technician / shayna dot munoz25 at uga dot edu</p>
+												<p> Shayna Muñoz recently received her B.S. in Forest Resources from UGA's Warnell School of Forestry and Natural Resources. She is currently a research technician for the lab's Avian Heavy Metal project. In her free time, she is a fan of hiking, music, and true crime podcasts.</p>
 											</div>
-											<img src="./images/carson_tele_crop2.jpg" class="w3-round" alt="carson" width="100%" height="auto">
+											<img src="./images/carson.jpg" class="w3-round" alt="carson" width="100%" height="auto" style="margin-top:5%">
 												<div>
 													<h5>Carson Pakula</h5>
-													<p style="color: grey">M.S. Student / carson at uga dot edu</p>
+													<p style="color: grey">M.S. Student / carson dot pakula at uga dot edu</p>
 													<p>Carson received his B.S. in Biology from Central Michigan University where he studied black footed ferret genetics and the impacts of hiking trails on small mammal populations. He is currently an M.S. student at Warnell's School of Forestry and Natural Resources. Carson is studying the behavior of deer and wild pigs to help reduce wildlife-vehicle collisions. He is interested in behavioral ecology, wildlife conservation, and human-wildlife interactions.</p>
 												</div>
-												<img src="./images/shane.jpg" class="w3-round w3-opacity-min" alt="shane" width="100%" height="auto">
+												<img src="./images/shane.jpg" class="w3-round" alt="shane" width="100%" height="auto" style="margin-top:5%">
 													<div>
 														<h5>Shane Guenin</h5>
-														<p style="color: grey">M.S. Student / shane at uga dot edu</p>
+														<p style="color: grey">M.S. Student / shane dot guenin at uga dot edu</p>
 														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 													</div>
-													<img src="./images/jon_headshot_crop.jpg" class="w3-round" alt="jon" width="100%" height="auto">
+													<img src="./images/jon.jpg" class="w3-round" alt="jon" width="100%" height="auto" style="margin-top:5%">
 														<div>
 															<h5>Jon Skaggs</h5>
 															<p style="color: grey">Lab Manager / jskaggs at uga dot edu /
 																<a href="https://www.github.com/jskaggs2" title="github/jskaggs2" target="_blank">Github</a>
 															</p>
-															<p>Jon manages day to day DeVault Lab stuff and leads our bird monitoring fieldwork associated with the Savannah Harbor Expansion Project. He recieved a B.S. in Ecology and M.S. in Conservation Ecology and Sustainable Development from UGA's Odum School of Ecology. His masters research developed and applied quantiative conservation planning techniques to a freshwater biodiversity hotspot, the Upper Coosa River System. Jon is interested in ecotoxicology, watershed ecology, quantiative conservation planning, and spatial analysis. He also likes bicycles. Jon built and maintains this website; if you see something strange, or are interested in the site itself, please reach out.</p>
+															<p>Jon manages day to day DeVault Lab stuff and leads our bird monitoring fieldwork associated with the Savannah Harbor Expansion Project. He recieved a B.S. in Ecology and M.S. in Conservation Ecology and Sustainable Development from UGA's Odum School of Ecology. His masters research developed and applied quantiative conservation planning techniques to a freshwater biodiversity hotspot, the Upper Coosa River System. Jon is interested in ecotoxicology, watershed ecology, and spatial analysis. He also likes to ride and wrench on bikes and get lost in the woods. Jon built and maintains this website; if you see something strange, or are interested in the site itself, please reach out.</p>
 														</div>
 													</div>
 												</div>
