--- a/research.html
+++ b/research.html
@@ -32,8 +32,9 @@
 							<!-- Page content -->
 							<div class="w3-content">
 								<!-- Current projects -->
-								<div class="w3-container w3-padding-64">
-									<h3>Ecology of Animal-Vehicle Collisions</h3>
+								<div class="w3-container w3-padding-32">
+									<h2>Ecology of Animal-Vehicle Collisions</h2>
+									<div class="w3-container w3-padding-32">
 									<div class="grid-container">
 										<div>
 											<img src="./images/about.jpg" class="w3-round" alt="travis" width="100%" height="auto">
@@ -44,26 +45,37 @@
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 											</div>
+											</div>
 										</div>
 										<hr>
-											<div class="w3-container w3-padding-64">
-												<h3>Avian Ecotoxicology</h3>
+											<div class="w3-container w3-padding-8">
+												<h2>Avian Ecotoxicology</h2>
+												<div class="w3-container w3-padding-16">
 												<div class="grid-container">
-													<img src="./images/shep_mistnet.jpg" class="w3-round" alt="lab" width="100%" height="auto">
+												<div>
+													<img src="./images/rwbb.jpg" class="w3-round" alt="rwbb" width="100%" height="auto">
+													<img src="./images/shep_dike.jpg" class="w3-round" alt="dike" width="100%" height="auto" style="margin-top:10%">
+													<img src="./images/mallards.jpg" class="w3-round" alt="mallards" width="100%" height="auto" style="margin-top:10%">
+													</div>
 														<div>
-															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+															<p>Ongoing research in our lab uses integrated approaches to examine the dynamics of natural and anthropogenic contaminants, such as heavy metals and radioactivity, and birds at the individual, population, and ecosystem scales. Birds are visible, widespread, and commonly regarded as reliable indicator species. Therefore, this work contributes to our understanding of exposure and sensitivity of birds and other wildlife to environmental contaminants, and aims to inform management and conservation actions that promote wildlife and human health.</p>
+															<p>Constructed wetlands are used to facilitate the sequestration of heavy metals into soil, which can greatly reduce the spread of metal contamination into downstream aquatic environments. The DeVault Lab is currently investigating how potentially toxic metals are transferred from constructed wetlands to terrestrial environments by quantifying heavy metal burdens in tissues of species that utilize constructed wetland habitat. Specifically, we are comparing heavy metal concentrations in avian communities using constructed wetlands to avian communities using wetlands with no history of contamination. With this information, we aim to better understand whether further mitigation efforts are necessary to reduce the spread of heavy metal contamination from constructed wetlands.</p>
+															<p>Cadmium (Cd) is a heavy metal with natural and anthropogenic sources and no known nutritional value. When exposed, birds may accumulate Cd in their tissues, most commonly through their diet. Low concentrations of Cd can be eliminated from the body, while high concentrations can accumulate in blood and tissue and cause deleterious effects. As part of the Savannah Harbor Expansion Project (SHEP) in Savannah, Georgia, dredge materials are deposited in large dredge material containment areas (DMCAs), which attract a diverse bird community of thousands of individuals. Surveys of the harbor's benthic sediment revealed a naturally occuring Cd-laden layer, which when dredged and deposited in containment areas, could lead to increased exposure of birds to Cd. Our lab is leading the monitoring of Cd in birds within the DMCAs using field collections of sentinel bird species and state-of-the-art analytical analysis available at SREL. Primary outcomes of this work will inform SHEP managers of potential accumulation of Cd in birds at the DMCAs.</p>
+															<p>
 														</div>
+													</div>
 													</div>
 												</div>
 												<hr>
-													<div class="w3-container w3-padding-64">
-														<h3>Scavenging Ecology</h3>
+													<div class="w3-container w3-padding-16">
+														<h2>Scavenging Ecology</h2>
+														<div class="w3-container w3-padding-16">
 														<div class="grid-container">
-															<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+															<img src="./images/TUVU.jpg" class="w3-round" alt="lab" width="100%" height="auto">
 																<div>
 																	<p>Scavenging is much more than a curiosity of animal behavior; carrion consumption is widespread and common among terrestrial vertebrates and can have substantial impacts on communities and ecosystems. Our work in this area has branched into several lines of inquiry, the most recent of which intersect with our interest in the causes and consequences of AVCs. With our collaborators, we recently investigated the magnitude of animal mortality caused by AVCs, how carcasses produced from automobile strikes influence animal communities through scavenging, and the role vultures play in providing ecosystem services by consuming biomass produced from AVCs.</p>
 																</div>
+															</div>
 															</div>
 														</div>
 													</div>
