--- a/opportunities.html
+++ b/opportunities.html
@@ -46,7 +46,7 @@
 								</div>
 								<div class="w3-container w3-padding-16">
 								<h3>Current Opportunities</h3>
-									<p>Here, we'll post information about graduate student and other research positions in the DeVault Lab.</p>
+									<p>Here, we'll post information about open graduate student and other research positions in the DeVault Lab.</p>
 									<p><i>There are no open positions at this time.</i></p>
 								</div>
 								<div class="w3-container w3-padding-16">
