--- a/people.html
+++ b/people.html
@@ -35,11 +35,12 @@
 							<div class="grid-container" style="margin-left:16px!important">
 								<div>
 									<img src="./images/travis2.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="margin-top:5%">
-										<img src="./images/travis_interests.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="padding-top:10%"></div>
+										</div>
 									<div>
 										<h5>Travis DeVault, Ph.D</h5>
 										<p style="color: grey">Principal Investigator / travis dot devault at uga dot edu /
-											<a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank" class="w3-hover-text-green">Google Scholar</a>
+											<a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank" class="w3-hover-text-green">Google Scholar</a></p>
+											<img src="./images/travis_interests.jpg" class="w3-round" alt="travis" width="100%" height="auto">
 											<p>Travis DeVault is the Associate Director for Research and Senior Research Scientist at the
 												<a href="https://srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">University of Georgia's Savannah River Ecology Laboratory (SREL)</a>
 												. He also has a courtesy faculty appointment in the
@@ -49,7 +50,6 @@
 												and a PhD in wildlife ecology from the
 												<a href="https://ag.purdue.edu/fnr/Pages/default.aspx" title="Department of Forestry and Natural Resources at Purdue University" target="_blank" class="w3-hover-text-green">Department of Forestry and Natural Resources at Purdue University</a>. Travis is a wildlife ecologist and conservation biologist; his research focuses on understanding and preventing animal-vehicle collisions and other human-wildlife conflicts. He also maintains a long term research interest in the ecology of vultures and other vertebrate scavengers. Outside of work, Travis is a jack of all trades and master of none. He’s an eclectic sort who enjoys fishing, hunting, kayaking and canoeing, hiking with his family, wrestling with his dogs, playing basketball, obsessing over Chicago Cubs baseball and Indianapolis Colts football, blues guitar, tinkering in his woodshop, and playing video games while consuming bourbon and scotch. Actually, he is pretty good at that last one.
 											</p>
-										</p>
 									</div>
 									<img src="./images/mary.jpg" class="w3-round" alt="mary" width="100%" height="auto"  style="margin-top:5%">
 										<div>
