--- a/research.html
+++ b/research.html
@@ -37,8 +37,9 @@
 									<div class="w3-container w3-padding-32">
 									<div class="grid-container">
 										<div>
-											<img src="./images/about.jpg" class="w3-round" alt="travis" width="100%" height="auto">
+											<img src="./images/plane.jpg" class="w3-round" alt="plane" width="100%" height="auto">
 												<img src="./images/lightbar.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="padding-top:10%">
+												<img src="./images/deer.jpg" class="w3-round" alt="deer" width="100%" height="auto" style="padding-top:10%">
 												</div>
 											<div>
 												<p>Animal-vehicle collisions (AVCs) are ubiquitous across the developed world. AVCs cause billions of animal deaths each year and pose substantial safety threats and economic costs to people. Research on AVCs in the DeVault Lab is focused on learning why AVCs occur by investigating what goes wrong from the animal’s perspective when they are struck by vehicles. DeVault Lab members then apply that knowledge to the development of mitigation measures designed to reduce collisions.</p>
@@ -48,7 +49,7 @@
 											</div>
 										</div>
 										<hr>
-											<div class="w3-container w3-padding-8">
+											<div class="w3-container">
 												<h2>Avian Ecotoxicology</h2>
 												<div class="w3-container w3-padding-16">
 												<div class="grid-container">
@@ -60,14 +61,13 @@
 														<div>
 															<p>Ongoing research in our lab uses integrated approaches to examine the dynamics of natural and anthropogenic contaminants, such as heavy metals and radioactivity, and birds at the individual, population, and ecosystem scales. Birds are visible, widespread, and commonly regarded as reliable indicator species. Therefore, this work contributes to our understanding of exposure and sensitivity of birds and other wildlife to environmental contaminants, and aims to inform management and conservation actions that promote wildlife and human health.</p>
 															<p>Constructed wetlands are used to facilitate the sequestration of heavy metals into soil, which can greatly reduce the spread of metal contamination into downstream aquatic environments. The DeVault Lab is currently investigating how potentially toxic metals are transferred from constructed wetlands to terrestrial environments by quantifying heavy metal burdens in tissues of species that utilize constructed wetland habitat. Specifically, we are comparing heavy metal concentrations in avian communities using constructed wetlands to avian communities using wetlands with no history of contamination. With this information, we aim to better understand whether further mitigation efforts are necessary to reduce the spread of heavy metal contamination from constructed wetlands.</p>
-															<p>Cadmium (Cd) is a heavy metal with natural and anthropogenic sources and no known nutritional value. When exposed, birds may accumulate Cd in their tissues, most commonly through their diet. Low concentrations of Cd can be eliminated from the body, while high concentrations can accumulate in blood and tissue and cause deleterious effects. As part of the Savannah Harbor Expansion Project (SHEP) in Savannah, Georgia, dredge materials are deposited in large dredge material containment areas (DMCAs), which attract a diverse bird community of thousands of individuals. Surveys of the harbor's benthic sediment revealed a naturally occuring Cd-laden layer, which when dredged and deposited in containment areas, could lead to increased exposure of birds to Cd. Our lab is leading the monitoring of Cd in birds within the DMCAs using field collections of sentinel bird species and state-of-the-art analytical analysis available at SREL. Primary outcomes of this work will inform SHEP managers of potential accumulation of Cd in birds at the DMCAs.</p>
-															<p>
+															<p>Cadmium (Cd) is a heavy metal with natural and anthropogenic sources and no known nutritional value. When exposed, birds may accumulate Cd in their tissues, most commonly through their diet. Low concentrations of Cd can be eliminated from the body, while high concentrations can accumulate in blood and tissue and cause deleterious effects. As part of the Savannah Harbor Expansion Project (SHEP) in Savannah, Georgia, dredge materials are deposited in large dredge material containment areas (DMCAs), which attract a diverse bird community of thousands of individuals. Surveys of the harbor's benthic sediment revealed a naturally occuring Cd-laden layer, which when dredged and deposited in containment areas, could lead to increased exposure of birds to Cd. Our lab is leading the monitoring of Cd in birds within the DMCAs using field collections of sentinel bird species and state-of-the-art analytical analysis available at SREL. In collaboration with agency and consultant partners, the primary outcome of this work is to inform SHEP managers of any Cd accumulation in birds using the DMCAs.</p>
 														</div>
 													</div>
 													</div>
 												</div>
 												<hr>
-													<div class="w3-container w3-padding-16">
+													<div class="w3-container">
 														<h2>Scavenging Ecology</h2>
 														<div class="w3-container w3-padding-16">
 														<div class="grid-container">
