--- a/people.html
+++ b/people.html
@@ -21,7 +21,7 @@
 					</div>
 					<!-- Header -->
 					<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-						<img class="w3-image" src="./images/home_crop2.jpg" alt="home" width="100%" height=auto>
+						<img class="w3-image" src="./images/home_crop.jpg" alt="home" height="100%">
 							<div class="w3-display-bottomleft w3-padding-large">
 								<h1 style="color: white; opacity: 1">
 									<b>PEOPLE</b>
@@ -32,7 +32,7 @@
 						<div class="w3-content">
 							<!-- People Section -->
 							<div class="w3-container w3-padding-64"/>
-							<div class="grid-container" style="margin-left:16px!important">
+							<div class="grid-container">
 								<div>
 									<img src="./images/travis2.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="margin-top:5%">
 										</div>
@@ -40,10 +40,9 @@
 										<h5>Travis DeVault, Ph.D</h5>
 										<p style="color: grey">Principal Investigator / travis dot devault at uga dot edu /
 											<a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank" class="w3-hover-text-green">Google Scholar</a></p>
-											<img src="./images/travis_interests.jpg" class="w3-round" alt="travis" width="100%" height="auto">
+											<img src="./images/travis3.jpg" class="w3-round" alt="travis3" width="100%" height="auto">
 											<p>Travis DeVault is the Associate Director for Research and Senior Research Scientist at the
-												<a href="https://srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">University of Georgia's Savannah River Ecology Laboratory (SREL)</a>
-												. He also has a courtesy faculty appointment in the
+												<a href="https://srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">University of Georgia's Savannah River Ecology Laboratory (SREL)</a>. He also has a courtesy faculty appointment in the
 												<a href="https://www.warnell.uga.edu/" title="Warnell School of Forestry & Natural Resources" target="_blank" class="w3-hover-text-green">Warnell School of Forestry & Natural Resources</a>
 												where he advises graduate students. He earned bachelor’s and master’s degrees in ecology and systematics from the
 												<a href="https://www.indstate.edu/cas/biology" title="Department of Biology at Indiana State University" target="_blank" class="w3-hover-text-green">Department of Biology at Indiana State University</a>
