--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@
 						</div>
 						<!-- Header -->
 						<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-							<img class="w3-image" src="./images/home_crop2.jpg" alt="home" width="100%" height=auto>
+							<img class="w3-image" src="./images/home_crop.jpg" alt="home" width="100%">
 								<div class="w3-display-bottomleft w3-padding-large">
 									<h1 style="color: white; opacity: 1">
 										<b>RESEARCH</b>
@@ -55,8 +55,8 @@
 												<div class="grid-container">
 												<div>
 													<img src="./images/rwbb.jpg" class="w3-round" alt="rwbb" width="100%" height="auto">
-													<img src="./images/shep_dike.jpg" class="w3-round" alt="dike" width="100%" height="auto" style="margin-top:10%">
-													<img src="./images/mallards.jpg" class="w3-round" alt="mallards" width="100%" height="auto" style="margin-top:10%">
+													<img src="./images/dike.jpg" class="w3-round" alt="dike" width="100%" height="auto" style="margin-top:10%">
+													<img src="./images/mallard2.jpg" class="w3-round" alt="mallard2" width="100%" height="auto" style="margin-top:10%">
 													</div>
 														<div>
 															<p>Ongoing research in our lab uses integrated approaches to examine the dynamics of natural and anthropogenic contaminants, such as heavy metals and radioactivity, and birds at the individual, population, and ecosystem scales. Birds are visible, widespread, and commonly regarded as reliable indicator species. Therefore, this work contributes to our understanding of exposure and sensitivity of birds and other wildlife to environmental contaminants, and aims to inform management and conservation actions that promote wildlife and human health.</p>
@@ -71,7 +71,7 @@
 														<h2>Scavenging Ecology</h2>
 														<div class="w3-container w3-padding-16">
 														<div class="grid-container">
-															<img src="./images/TUVU.jpg" class="w3-round" alt="lab" width="100%" height="auto">
+															<img src="./images/tuvu3.jpg" class="w3-round" alt="lab" width="100%" height="auto">
 																<div>
 																	<p>Scavenging is much more than a curiosity of animal behavior; carrion consumption is widespread and common among terrestrial vertebrates and can have substantial impacts on communities and ecosystems. Our work in this area has branched into several lines of inquiry, the most recent of which intersect with our interest in the causes and consequences of AVCs. With our collaborators, we recently investigated the magnitude of animal mortality caused by AVCs, how carcasses produced from automobile strikes influence animal communities through scavenging, and the role vultures play in providing ecosystem services by consuming biomass produced from AVCs.</p>
 																</div>
