--- a/collaborators.html
+++ b/collaborators.html
@@ -21,7 +21,7 @@
 					</div>
 					<!-- Header -->
 					<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-						<img class="w3-image" src="./images/home_crop2.jpg" alt="home" width="100%" height=auto>
+						<img class="w3-image" src="./images/home_crop.jpg" alt="home" width="100%">
 							<div class="w3-display-bottomleft w3-padding-large">
 								<h1 style="color: white; opacity: 1">
 									<b>COLLABORATORS</b>
