--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						</div>
 						<!-- Header -->
 						<header class="w3-display-container w3-auto w3-wide" id="home">
-							<img src="./images/home.jpg" alt="home" height="100%" style="margin-left:auto;margin-right:auto">
+							<img src="./images/home.jpg" alt="home" style="max-height:100vh;margin-left:auto;margin-right:auto">
 								<div class="w3-display-bottomleft w3-padding-large">
 									<h1 style="color:white;opacity:1">
 										<b>DeVAULT WILDLIFE LAB</b>
